<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="#eeeeee">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/calc_text"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:lines="3"
                android:textSize="30sp"
                android:gravity="bottom|right"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="4"
                android:rowCount="5">
                <Button
                    android:id="@+id/cancel"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:text="@string/cancel"
                    android:textSize="@dimen/button_font_size"/>
                <Button
                    android:id="@+id/divide"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:text="@string/divide"
                    android:textSize="@dimen/button_font_size"/>
                <Button
                    android:id="@+id/multiply"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:text="@string/multiply"
                    android:textSize="@dimen/button_font_size"/>
                <Button
                    android:id="@+id/clear"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:text="@string/clear"
                    android:textSize="@dimen/button_font_size"/>
                <Button
                    android:id="@+id/seven"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:text="@string/seven"
                    android:textSize="@dimen/button_font_size"/>
                <Button
                    android:id="@+id/eight"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:text="@string/eight"
                    android:textSize="@dimen/button_font_size"/>
                <Button
                    android:id="@+id/nine"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:text="@string/nine"
                    android:textSize="@dimen/button_font_size"/>
                <Button
                    android:id="@+id/plus"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:text="@string/plus"
                    android:textSize="@dimen/button_font_size"/>
                <Button
                    android:id="@+id/four"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:text="@string/four"
                    android:textSize="@dimen/button_font_size"/>
                <Button
                    android:id="@+id/five"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:text="@string/five"
                    android:textSize="@dimen/button_font_size"/>
                <Button
                    android:id="@+id/six"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:text="@string/six"
                    android:textSize="@dimen/button_font_size"/>
                <Button
                    android:id="@+id/minus"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:text="@string/minus"
                    android:textSize="@dimen/button_font_size"/>
                <Button
                    android:id="@+id/one"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:text="@string/one"
                    android:textSize="@dimen/button_font_size"/>
                <Button
                    android:id="@+id/two"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:text="@string/two"
                    android:textSize="@dimen/button_font_size"/>
                <Button
                    android:id="@+id/three"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:text="@string/three"
                    android:textSize="@dimen/button_font_size"/>
                <ImageButton
                    android:id="@+id/sqrt"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:src="@drawable/sqrt"
                    android:scaleType="centerInside"/>
                <Button
                    android:id="@+id/reciprocal"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:text="@string/reciprocal"
                    android:textSize="@dimen/button_font_size"/>
                <Button
                    android:id="@+id/zero"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:text="@string/zero"
                    android:textSize="@dimen/button_font_size"/>
                <Button
                    android:id="@+id/dot"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:text="@string/dot"
                    android:textSize="@dimen/button_font_size"/>
                <Button
                    android:id="@+id/equal"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:text="@string/equal"
                    android:textSize="@dimen/button_font_size"/>
            </GridLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>